--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 ---
 markdown: kramdown
 highlighter: rouge
-title: Anthony Ozier-Lafontaine
+title: Anthony 
+Ozier-Lafontaine
 url: https://anthoOzier.github.io
 baseurl: '' # /anthoOzier.github.io
 
