--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,13 @@ plugins:
 
 sidebar_home_link: true
 
-theme_colors:
-  sidebar-bg-color: "#0B1728" 
-  sidebar-fg-color: "#FFFFFF"
-  link-color: "#268bd2"
+theme_colors:  
+  # sidebar-bg-color: "#0B1728" 
+  # sidebar-fg-color: "#FFFFFF"
+  # link-color: "#268bd2"
+  sidebar-bg-color: "#FFFFFF" 
+  sidebar-fg-color: "#0b2816"
+  link-color: "#28a663"
 
 sidebar-sticky: true
 
